--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "toolstud-io/si_format",
     "version": "1.0.0",
-    "description": "PHP package to format number according to SI standards",
+    "description": "PHP package to format numbers according to SI standards (milli, micro, nano... / Kilo, Mega, Giga...)",
     "keywords": [
         "toolstud-io",
         "si_format"
